--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <li><a href="#about" onclick="toggleMenu()">Sobre mí</a></li>
                 <li><a href="#technology" onclick="toggleMenu()">Tecnologías</a></li>
                 <li><a href="#education" onclick="toggleMenu()">Educación</a></li>
-                <li><a href="#work" onclick="toggleMenu()">Trabajos</a></li>
+                <!-- <li><a href="#work" onclick="toggleMenu()">Trabajos</a></li> -->
                 <!-- <li><a href="#testimonial" onclick="toggleMenu()">Testimonios</a></li> -->
                 <li><a href="#contact" onclick="toggleMenu()">Contacto</a></li>
             </ul>
@@ -38,9 +38,11 @@
         </div>
         <div class="content wrap-this flex-column">
             <div class="contentBx w50">
-                <h3>Soy un desarrollador Full Stack</h3>
-                <p>Desde marketer hasta programador, al parecer he sido de las personas que si quieren aprender algo van a por ello. Es por eso que escogí priorizar aprender con proyectos, en plataformas, bootcamps y con comunidades. <br> <br> Las tecnologías en las que me base para aprender en este mundo fueron con las que se intenta construir la web al día de hoy. <br> <br> Me he especializado en una combinación de <span class="text-highlight"> Javascript</span> y <span class="text-highlight"> Python</span> principalmente. <br><br> Al principio me decidí por aprender en c# con Unity, y tiempo después con mucha teoría para formalizarlo con proyectos reales desarrollando aplicaciones web. <br><br>
-                En el entorno real, prefiero trabajar en el <span class="text-highlight">Backend</span>; pero estoy abierto a posiciones full stack, mientras la empresa ofrezca oportunidad de aprender</p>
+                <h3>Soy un desarrollador Web</h3>
+                <p>Desde marketer hasta programador, al parecer he sido de las personas que si quieren aprender algo van a por ello. Es por eso que escogí priorizar aprender con proyectos, en plataformas, bootcamps y con comunidades. <br> <br> Las tecnologías en las que me base para aprender en este mundo fueron con las que se intenta construir la web al día de hoy. <br> <br> Me he especializado en una combinación de  <span class="text-highlight"> Javascript</span> principalmente. <br><br> Al principio me decidí por aprender en c# con Unity, y tiempo después con mucha teoría para formalizarlo con proyectos reales desarrollando aplicaciones web. <br><br>
+                Al día de hoy estoy aprendiendo <span class="text-highlight"> Backend</span> con el stack de <span class="text-highlight"> M.E.R.N.</span>, así que mi meta en ser una persona capaz de realizar projectos con un potencial titánico... se acerca aún más.
+                </p>
+                <!-- <p>En el entorno real, prefiero trabajar en el <span class="text-highlight">Backend</span>; pero estoy abierto a posiciones full stack, mientras la empresa ofrezca oportunidad de aprender</p> -->
             </div>
             <div class="w50 center">
                 <img src="img/img3.jpg" class="content-img" alt="imagen-de-perfil2">
@@ -59,11 +61,11 @@
                 <h2>Javascript</h2>
                 <p>Desde arrays hasta los clousures, desde el engine v8 hasta las s.p.a. , estoy en sincronía con uno de los lenguajes más populares del mundo. Toda web dinámica se crea con este bello lenguaje. </p>
             </div>
-            <div class="servicesBx">
+            <!-- <div class="servicesBx">
                 <img src="/img/python.svg" alt="Python">
                 <h2>Python</h2>
                 <p>Para donde voy me resultó obvio aprender python, los usos que le puedo dar están en todos los ámbitos que me interesan. Además, agradezco la simplesa que le dió Guido V.R. a su sintaxis.</p>
-            </div>
+            </div> -->
             <div class="servicesBx">
                 <img src="/img/atom.svg" alt="React">
                 <h2>React</h2>
@@ -74,30 +76,35 @@
                 <h2>NodeJs</h2>
                 <p>En los equipos de trabajo quiero ser más eficaz. Si uso el mismo lenguaje para cliente y servidor puedo maximizar resultados. Además, NodeJs es perfecto para web apps de gran escalabilidad.</p>
             </div>
-            <div class="servicesBx">
+            <!-- <div class="servicesBx">
                 <img src="/img/education.svg" alt="Django">
                 <h2>Django</h2>
                 <p>En estos días donde queremos tener proyectos escalables y rápidos Django es una opción que tenía que tomar a la hora de aprender. Esto me ofrece poder trabajar con proyectos del día de hoy con mis objetivos.</p>
-            </div>
+            </div> -->
             <div class="servicesBx">
                 <img src="/img/monitor-screen.svg" alt="SQL">
                 <h2>SQL</h2>
                 <p>Nada más importante que tener conocimientos de bases de datos si quiero ser un excelente Backend Developer. Me siento compentente en este aspecto.</p>
             </div>
-            <div class="servicesBx">
+            <!-- <div class="servicesBx">
                 <img src="/img/logistics.svg" alt="Amazon Web Services">
                 <h2>Amazon Web Services</h2>
                 <p>Al día de hoy, aws es uno de los mejores y más usados servicios de nube que existen. Es una opción viable a la hora de hacer cualquier proyecto. Creo que encontraré muchas empresas que utilicen este servicio así que me uní a la ola.</p>
-            </div>
+            </div> -->
             <div class="servicesBx">
                 <img src="/img/github.svg" alt="Git & GitHub">
                 <h2>Git & GitHub</h2>
                 <p>Lo necesario para tener una buena colaboración en equipo. Con un sistema de control de versiones he podido tener más profesionalismo en mi aprendizaje y carrera.</p>
             </div>
-            <div class="servicesBx">
+            <!-- <div class="servicesBx">
                 <img src="/img/cloud-network.svg" alt="Digital Ocean">
                 <h2>Digital Ocean</h2>
                 <p>A la hora de elegir una opción cloud de calidad para hacer un deploy de mis proyectos, Digital Ocean se volvió una opción estándar, así que trato de incluirlo en mi framework de trabajo.</p>
+            </div> -->
+            <div class="servicesBx">
+                <img src="/img/folder.svg" alt="Firebase">
+                <h2>Firebase</h2>
+                <p>Unos cuantos projectos me han servido para iniciar poco a poco en el mundo de las bases de datos. Lo que me llamó la atención de Firebase es la simplicidad y apoyo con el que puedo iniciar.</p>
             </div>
         </div>
     </section>
@@ -203,21 +210,21 @@
     </section>
     
     <!-- SECTION TRABAJOS -->
-    <section class="work" id="work">
+    <!-- <section class="work" id="work">
         <div class="heading ">
             <h2>Trabajos Recientes</h2>
             <p>Aquí pondré un overlay a las imágenes explicando cosas.</p>
         </div>
         <div class="content">
             <div class="workBx">
-                <img src="img/product1.jpg" alt="producto1">
+                <img src="img/product1.jpg" alt="producto1"> -->
                 <!-- <div class="divHover">
                     <div>
                         <p>HOLASSSSSSSSSSSSSSSS</p>
                     </div>
-                </div> -->
-            </div>
-            <div class="workBx">
+                </div>
+            </div> -->
+            <!-- <div class="workBx">
                 <img src="img/product2.jpg" alt="producto2">
             </div>
             <div class="workBx">
@@ -226,11 +233,11 @@
             <div class="workBx">
                 <img src="img/product4.jpg" alt="producto4">
             </div>
-        </div>
+        </div> -->
         <!-- <div class="heading ">
             <a href="#" class="btn">Ver más</a>
         </div> -->
-    </section>
+    <!-- </section> -->
 
     
     <!-- FOOT OF PAGE -->
