--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <div class="textBx">
             <h2>Hola!, Soy<br><span>Ian Vass.</span></h2>
             <h3>Soy Desarrollador Web</h3>
-            <a href="#" class="btn">Ver CV</a>
+            <!-- <a href="#" class="btn">Ver CV</a> -->
         </div>
     </section>
     <!-- SECTION SOBRE MI -->
